<resources>
    <string name="app_name">U.S</string>

    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="events">Events</string>
    <string name="favorite">Favorites</string>
    <string name="inbox">Inbox</string>
    <string name="contact_us">Contact Us</string>
    <string name="feed_back">Feed Back</string>
    <string name="setting">Setting</string>

    <string name="my_schools">My Schools</string>
    <string name="add_school">Add a school</string>
    <string name="use_app">How to use Application</string>
</resources>
